# movie-list

./: .flake8  .gitignore  CI_CD_SETUP.md  COLLABORATIVE_FILTERING_OPTIONS.md  COMPLETE_PROJECT_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  LINTING_GUIDE.md  README.md  RECOMMENDATION_STRATEGY.md  RECOMMENDATION_SYSTEM.md  pyproject.toml  pytest.ini  requirements.txt
.github/: BRANCH_PROTECTION.md  CODEOWNERS  PR_WORKFLOW.md  pull_request_template.md
.github/workflows/: README.md  pr-checks.yml  test.yml
.streamlit/: config.toml
data/: movies_df.parquet
data/recommendations/: recommendations_latest.json
docs/: ARCHITECTURE.md  CI_CD_SETUP.md  GET_STARTED_CHECKLIST.md  QUICK_START.md  README.md  STREAMLIT_RECOMMENDATIONS.md  index.html  movies_list.html  movies_list_template.html
notebooks/: 1_upload_movie_creds.ipynb  2_add_movie_id.ipynb  3_movie_validate.ipynb  5_replace_mistakes.ipynb  6_analytics.ipynb  7_add_new_movies.ipynb  8_recommendation_demo.ipynb  9_add_historical_movies.ipynb  add_movie_id.ipynb  enrich_df_with_params.ipynb  movie_validate.ipynb  upload_movie_creds.ipynb
scripts/: download_movielens.py  fix.sh  generate_recommendations.py  github_sync.py  lint.sh  scheduled_retrain.sh  setup_recommendations.sh  streamlit_app.py  tmdb_client.py
scripts/recommendation/: __init__.py  collaborative_filtering.py  content_based.py  movielens_cf.py
tests/: __init__.py  test_collaborative_filtering.py  test_content_based.py  test_generate_recommendations.py  test_movielens_cf.py  test_tmdb_client.py  verify_imports.py
