[project]
name = "movies-hobby"
version = "0.1.0"
description = "Movie recommendation system with collaborative filtering"
authors = [
    {name = "Konstantin Burkin",email = "burkin-kost@yandex.ru"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "polars (>=1.31.0,<2.0.0)",
    "fastexcel (>=0.14.0,<0.15.0)",
    "requests (>=2.32.4,<3.0.0)",
    "python-dotenv (>=1.1.1,<2.0.0)",
    "tqdm (>=4.67.1,<5.0.0)",
    "xlsxwriter (>=3.2.5,<4.0.0)",
    "matplotlib (>=3.10.5,<4.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "plotly (>=6.2.0,<7.0.0)",
    "scikit-learn (>=1.6.1)",
    "scipy (>=1.15.2)",
    "scikit-surprise (>=1.1.4)",
    "tmdbv3api (>=1.9.0)",
]

[project.optional-dependencies]
dev = [
    "pytest (>=8.3.4)",
    "pytest-cov (>=6.0.0)",
    "pytest-mock (>=3.14.0)",
    "flake8 (>=7.1.1)",
    "black (>=24.10.0)",
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
target-version = ['py312', 'py313']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
  | \.eggs
  | \.tox
  | dist
  | build
  | notebooks
)/
'''

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-v --strict-markers --tb=short"

[tool.coverage.run]
source = ["scripts"]
omit = [
    "*/tests/*",
    "*/__pycache__/*",
    "*/venv/*",
    "*/.venv/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
